[metadata]
name = waves
version = 0.0.2
description = Utility to work with WAV files in a simple way.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/mondeja/waves
author = Álvaro Mondéjar Rubio
author_email = mondejar1994@gmail.com
license = BSD License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = waves
install_requires =
    matplotlib
    numpy
    pygame
    pysndfile
python_requires = >=3.6
include_package_data = True

[options.extras_require]
dev =
    Sphinx==3.4.3
    black==20.8b1
    bump2version==1.0.1
    flake8==3.8.4
    flake8-absolute-import>=1.0
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    furo==2020.12.30b24
    isort==5.7.0
    pre-commit==2.10.0
    pytest==6.2.2
    pytest-cov==2.11.1
    yamllint==1.26.0
doc =
    Sphinx==3.4.3
    furo==2020.12.30b24
lint =
    black==20.8b1
    flake8==3.8.4
    flake8-absolute-import>=1.0
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.7.0
    yamllint==1.26.0
test =
    pytest==6.2.2
    pytest-cov==2.11.1

[tool:pytest]
addopts = --doctest-modules waves tests

[flake8]
max-line-length = 88
extend-ignore =
    E203,
    W503,
    E731
per-file-ignores =
    docs/conf.py: E402
docstring-convention = numpy

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 88
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
known_tests = tests
sections = STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
